# prometheus-ebm-sdk

./: .gitignore  INDEPENDENT_LAB_RUN_GUIDE.md  LICENSE  README.md  groq_local_test.csv  out.txt  out2.txt  pyproject.toml
docs/: KAGGLE_RUN_GUIDE.md  POSTRUN_DATASET_DECISION_PLAN.md  PROJECT_STRUCTURE.md
examples/: compare_5_models.py  deep_probe_opus.py  test_groq.py
notebooks/: Dataset_Generator_1000.ipynb  Final_V5.ipynb
notebooks/input_bundle/: dataset_scaler.py
prometheus-ebm-platform/: README.md  setup.py  test_sdk.py
prometheus-ebm-platform/prometheus_ebm/: __init__.py  cli.py  dataset.py  evaluator.py  profiler.py  scorer.py  stats.py  stress.py  taxonomy.py
prometheus-ebm-sdk/: .gitignore  INDEPENDENT_LAB_RUN_GUIDE.md  README.md  pyproject.toml
prometheus-ebm-sdk/examples/: compare_5_models.py  deep_probe_opus.py  test_groq.py
prometheus-ebm-sdk/prometheus_ebm/: __init__.py  config.py  research_grade.py  runner.py  scorer.py  visualizations.py
prometheus-ebm-sdk/prometheus_ebm/data/: prometheus_200_multimodel_dataset.json
prometheus-ebm-sdk/prometheus_ebm/providers/: __init__.py  anthropic.py  openai.py  openrouter.py
prometheus-ebm-sdk/tests/: test_runner_compat.py  test_scorer.py
prometheus_ebm/: __init__.py  config.py  research_grade.py  runner.py  scorer.py  taxonomy.py  workflow_v5.py
prometheus_ebm/data/: README.md  probe_ambiguity.json  probe_contradictions.json  prometheus_1000_dataset.json
prometheus_ebm/providers/: kaggle.py  openai.py
prometheus_ebm/rg/: judge.py
tests/: test_runner_compat.py  test_scorer.py
(+2 files in other folders)
