[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-ebm"
version = "0.1.0"
description = "PROMETHEUS-EBM: Benchmarking Epistemic Metacognition in AI Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mushfiqul Alam", email = "mushfiqulalam007@gmail.com"},
]
keywords = ["ai", "benchmark", "metacognition", "calibration", "epistemic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "requests>=2.28",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.25", "openai>=1.0"]

[project.urls]
Homepage = "https://github.com/mushfiqulalam007/prometheus-ebm-sdk"
Repository = "https://github.com/mushfiqulalam007/prometheus-ebm-sdk"

[tool.setuptools.packages.find]
include = ["prometheus_ebm*"]
